lightbox: fix overflow on mobile
the static width of 650px doesn't fit on all screens, especially on
mobile. I added a `max-width: 100%` which makes this work on my iOS
device.

--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ button:hover {
   top: 50px;
   overflow: auto;
   width: 650px;
+  max-width: 100%;
   padding: 25px;
   margin: auto;
 
